--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,32 +1,33 @@
 {
-	"clock.alignment": "Right",
-	"clock.format": "ddd dd mmm  HH:MM",
-	"clock.iconName": "null",
-	"editor.fontSize": 13,
-	"editor.formatOnPaste": true,
-	"editor.formatOnSave": true,
-	"editor.suggestSelection": "first",
-	"editor.tabSize": 2,
-	"files.autoSave": "afterDelay",
-	"gitlens.currentLine.enabled": false,
-	"gitlens.hovers.currentLine.over": "line",
-	"terminal.explorerKind": "external",
-	"terminal.external.osxExec": "iTerm.app",
-	"terminal.integrated.fontFamily": "Hack Nerd Font",
-	"terminal.integrated.lineHeight": 1.3,
-	"terminal.integrated.shell.osx": "/usr/local/bin/fish",
-	"todo-tree.general.tags": [
-		"BUG",
-		"HACK",
-		"FIXME",
-		"TODO",
-		"XXX",
-		"todo"
-	],
-	"todo-tree.tree.showScanModeButton": false,
-	"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-	"window.newWindowDimensions": "fullscreen",
-	"window.restoreFullscreen": true,
-	"workbench.colorTheme": "One Dark Pro",
-	"workbench.editor.highlightModifiedTabs": true
+    "clock.alignment": "Right",
+    "clock.format": "ddd dd mmm  HH:MM",
+    "clock.iconName": "null",
+    "editor.fontSize": 13,
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.suggestSelection": "first",
+    "editor.tabSize": 2,
+    "files.autoSave": "afterDelay",
+    "gitlens.currentLine.enabled": false,
+    "gitlens.hovers.currentLine.over": "line",
+    "search.mode": "newEditor",
+    "terminal.explorerKind": "external",
+    "terminal.external.osxExec": "iTerm.app",
+    "terminal.integrated.fontFamily": "Hack Nerd Font",
+    "terminal.integrated.lineHeight": 1.3,
+    "terminal.integrated.shell.osx": "/usr/local/bin/fish",
+    "todo-tree.general.tags": [
+        "BUG",
+        "HACK",
+        "FIXME",
+        "TODO",
+        "XXX",
+        "todo"
+    ],
+    "todo-tree.tree.showScanModeButton": false,
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "window.newWindowDimensions": "fullscreen",
+    "window.restoreFullscreen": true,
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.colorTheme": "One Dark Pro"
 }
